--- a/main-ui/package.json
+++ b/main-ui/package.json
@@ -13,7 +13,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "deploy": "react-scripts build && aws s3 sync ./build s3://dailywombat.com",
+    "deploy": "react-scripts build && aws s3 sync ./build s3://berserknobel.com",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
